--- a/RedeSocial/templates/en/public/Feeds2.HTML
+++ b/RedeSocial/templates/en/public/Feeds2.HTML
@@ -16,7 +16,7 @@
 	
 	{% endif %}
 		
-		<form name="form" action="buscaPerfilUsuario/{{e.usuario.id}}" method="post" style="margin-top: 2px;">
+		<form name="form" action="buscaPerfilUsuario{{e.usuario.id}}" id="form-busca-usuario" method="post" style="margin-top: 2px;">
 			{% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
 				class="meulink"> <input type="hidden" name="cUsuario"
 				value="{{e.usuario.id}}"> <font id="containerData">{{e.date|date:"D d M Y"}}</font> 
@@ -74,33 +74,16 @@
 				</tr>
 			</table>
 
-		<form action="postarComentarios" id="postar-comentario" method="post">
-			{% csrf_token %}
-			<hr
+		<hr
 				style="margin: 5px 15px 0px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
-			<div id="enviarPost">
-				<table>
-					<tr>
-						<td style="background: ; width: 100%; height: 0px ">
-			
-				<textarea name="cComentario" class="formTextAreaTimeLine"
-					placeholder="Escreva um comentário..."></textarea>		
-
-						</td>
-						
-						<td style="margin-left: 10px; background: ; width: 50px;">
-						
-							<input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
-							<button style="float: right;" class="btn btn-enviaComent">
-								<span class="glyphicon glyphicon-share-alt"></span>
-							</button>
-							
-						</td>
-					</tr>
-				</table>
+			<div class="comentario-postagem">
+				<form action="postarComentarios" id="postar-comentario" method="post">
+				{% csrf_token %}
+					<input type="text" class="input-comentario" placeholder="Deixe seu comentário" required/><button class="button-comentario"><span class="glyphicon glyphicon-send"></span></button>
+					<input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
+				</form>				
 			</div>
-		</form>
 		
 	</div>
 
@@ -122,21 +105,21 @@
     </form> 
 
     {% endif %}
-
-       <form name="form" action="buscaPerfilUsuario/{{e.usuario.id}}" method="post" style="margin-top: 2px;">
-            {% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
-                class="meulink"> <input type="hidden" name="cUsuario"
-                value="{{e.usuario.id}}"> 
-
-                <font id="containerData">
-                    {{e.date|date:"D d M Y"}}
-                    
-                    {% if e.nome_desafio != None %}
-                        <font class="meulink" style="margin-left: 55px;"><span class="form-class-nome">Desafio: </span>{{e.nome_desafio}}</font>
-                    {% endif %}
-                </font>
-        </form>
-
+		<div id="top-postagem-desafio" style="margin-top: 2px;">
+	       	<form name="form" action="buscaPerfilUsuario{{e.usuario.id}}"  id="form-busca-usuario-desafio" method="post" >
+	            {% csrf_token %} <input type="submit" value="{{e.usuario.nome}}"
+	                class="meulink"> <input type="hidden" name="cUsuario"
+	                value="{{e.usuario.id}}"> 
+	
+	                <font id="containerData">
+	                    {{e.date|date:"D d M Y"}}
+	                    
+	                    {% if e.nome_desafio != None %}
+	                        <font style="float: right; margin-right: 35px; margin-top: 6px;">{{e.nome_desafio}}</font>
+	                    {% endif %}
+	                </font>
+	        </form>
+		</div>
         <div id="containerTextoPostagem">
           {{e.text}} {% if e.foto.url != '/media/False' %}
             <center>
@@ -188,28 +171,16 @@
           </tr>
       </table>
 
-        <form action="postarComentarios" id="postar-comentario-desafio" method="post">
-          {% csrf_token %}
-          <hr style="margin: 5px 15px 0px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+       <hr
+				style="margin: 5px 15px 0px 15px; border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
-          <div id="enviarPost">
-            <table>
-              <tr>
-                <td style="background: ; width: 100%; height: 0px ">
-                  <textarea name="cComentario" class="formTextAreaTimeLine"
-                    placeholder="Escreva um comentário..."></textarea>    
-                </td>
-                
-                <td style="margin-left: 10px; background: ; width: 50px;">
-                  <input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
-                  <button style="float: right;" class="btn btn-enviaComent">
-                    <span class="glyphicon glyphicon-share-alt"></span>
-                  </button>
-                </td>
-              </tr>
-            </table>
-          </div>
-        </form>
+			<div class="comentario-postagem">
+				<form action="postarComentarios" id="postar-comentario-desafio" method="post">
+				{% csrf_token %}
+					<input type="text" class="input-comentario" placeholder="Deixe seu comentário" required/><button class="button-comentario"><span class="glyphicon glyphicon-send"></span></button>
+					<input type="hidden" id="comentario-id" name="cId" value="{{e.id}}" /> 
+				</form>				
+			</div>
     </div>
     
 <!-- ############################ Fim - Postagem desafio #################################### -->
