--- a/RedeSocial/templates/en/public/Pendentes.HTML
+++ b/RedeSocial/templates/en/public/Pendentes.HTML
@@ -16,7 +16,7 @@
           </li>
           
           <li style="margin: 7px 15px 15px 15px;">
-            <form name="form" action="buscaPerfilUsuario/{{e.usuario_desafiante.id}}" method="post">
+            <form name="form" action="buscaPerfilUsuario{{e.usuario_desafiante.id}}" method="post">
               {% csrf_token %} <input type="submit" value="{{e.usuario_desafiante.nome}}"
                 class="meulink"> <input type="hidden" name="cUsuario"
                 value="{{e.usuario_desafiante.id}}">
