--- a/RedeSocial/static/css/estilorede.css
+++ b/RedeSocial/static/css/estilorede.css
@@ -745,9 +745,9 @@ hr.style-seven:before { /* Not really supposed to work, but does */
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
-	-moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	-webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 }
 
 #containerPostagem:hover {
@@ -862,9 +862,9 @@ hr.style-seven:before { /* Not really supposed to work, but does */
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
-	-moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	-webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 }
 
 .containerPostagemDesafio:hover {
@@ -923,6 +923,81 @@ hr.style-seven:before { /* Not really supposed to work, but does */
 	border: 1px solid #d7d6d2;
 	line-height: 1.9;
 	padding-left: 10px;
+}
+/*
+.input-comentario, .button-comentario {
+    padding: 0.3em 0.6em;
+    margin: 0.1em 0.2em;
+    font-family: Calibri;
+	font-size: 10pt;
+	height: 27px;
+	outline: none;
+	resize: none;
+	border-radius: 2px;
+	border: 1px solid #d7d6d2;
+	padding-left: 10px;
+}
+
+.input-comentario {
+	width: 490px;
+    margin-right: 0;
+    border-radius: 2px 0px 0px 2px;
+}
+
+.button-comentario {
+    margin-left: 0;
+    border-radius: 0px 2px 2px 0px;
+    background-color: #337ab7;
+    border-color: #337ab7;
+    color: #fff;
+}
+
+.button-comentario:hover{
+	color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
+    outline: none;
+}
+
+.button-comentario::-moz-focus-inner {
+    padding: 0;
+    border: 0
+}*/
+.comentario-postagem{
+	margin-left: 15px;
+	margin-right: 15px;
+}
+.input-comentario{
+	width: 520px;
+	padding: 5px;
+	border: 1px solid #d7d6d2;
+}
+.input-comentario, .button-comentario{
+	font-family: Calibri;
+	font-size: 10pt;
+    margin: 5px 0px 0px;
+    outline: none;
+}
+
+.button-comentario {
+	padding: 5px;
+    margin-left: -1px;
+    border-radius: 0px 2px 2px 0px;
+    background-color: #337ab7;
+    color: #fff;
+    border: 1px solid #204d74;
+}
+
+.button-comentario:hover{
+	color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
+    outline: none;
+}
+
+.button-comentario::-moz-focus-inner {
+    padding: 0;
+    border: 0
 }
 
 #containerComentarioPost textarea {
@@ -1459,7 +1534,7 @@ fieldset {
 	font-family: tahoma;
 }
 
-#enviarPost input {
+#en.viarPost input {
 	float: right;
 	margin: 0px 3px 0px 0px;
 }
