--- a/RedeSocial/templates/en/public/Ativos.HTML
+++ b/RedeSocial/templates/en/public/Ativos.HTML
@@ -16,7 +16,7 @@
 						</li>
 						
 						<li style="margin: 7px 15px 15px 15px;">
-							<form name="form" action="buscaPerfilUsuario/{{a.usuario_desafiante.id}}" method="post">
+							<form name="form" action="buscaPerfilUsuario{{a.usuario_desafiante.id}}" method="post">
 								{% csrf_token %} <input type="submit" value="{{a.usuario_desafiante.nome}}"
 									class="meulink"> <input type="hidden" name="cUsuario"
 									value="{{a.usuario_desafiante.id}}">
