--- a/RedeSocial/templates/en/public/Cumpridos.HTML
+++ b/RedeSocial/templates/en/public/Cumpridos.HTML
@@ -15,7 +15,7 @@
 							</li>						
 								
 							<li style="margin: 7px 15px 15px 15px;">
-								<form name="form" action="buscaPerfilUsuario/{{a.usuario_desafiado.id}}" method="post">
+								<form name="form" action="buscaPerfilUsuario{{a.usuario_desafiado.id}}" method="post">
 									{% csrf_token %} 
 									<input type="submit" value="{{a.usuario_desafiado.nome}}" class="meulink"> 
 									<input type="hidden" name="cUsuario" value="{{a.usuario_desafiado.id}}">
