--- a/RedeSocial/static/css/estilorede.css
+++ b/RedeSocial/static/css/estilorede.css
@@ -711,9 +711,9 @@ hr.style-seven:before { /* Not really supposed to work, but does */
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
-	-moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	-webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 }
 
 #ul-comentarios li{
@@ -964,13 +964,14 @@ hr.style-seven:before { /* Not really supposed to work, but does */
     border: 0
 }*/
 .comentario-postagem{
-	margin-left: 15px;
+	margin-left: 42px;
 	margin-right: 15px;
 }
 .input-comentario{
-	width: 520px;
+	width: 470px;
 	padding: 5px;
 	border: 1px solid #d7d6d2;
+	outline: none;
 }
 .input-comentario, .button-comentario{
 	font-family: Calibri;
@@ -985,7 +986,12 @@ hr.style-seven:before { /* Not really supposed to work, but does */
     border-radius: 0px 2px 2px 0px;
     background-color: #337ab7;
     color: #fff;
-    border: 1px solid #204d74;
+    border: 1px solid #337ab7;
+}
+
+.button-comentario span{
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 .button-comentario:hover{
